Frontend/src/components/VirtualScroll/HorizontalVirtualScoll/HorizontalVirtualScroll.module.scss
@use "@/styles/colors" as colors;

.meterWrapper {
  position: absolute;
  width: 100%;
  height: 400px;

  display: flex;
  flex-direction: column;
  justify-content: flex-start;
  align-items: center;
  background-color: colors.$violet;
}

.meterComponent {
  height: 100%;
  width: 100%;
  user-select: none;
  overflow: hidden; //hidden default, scroll for testing purposes
  z-index: 2;
  // will-change: scroll-position, transform;
}

.meterCenterLine {
  width: 100%;
  height: 1px;
  background: #000;
  top: 50%;
  position: relative;
}

.virtualizerWrapper {
  height: 100%;
  position: relative;
  display: flex;
  align-items: center;
  // overflow-x: hidden;
  // will-change: transform;
}

.virtualizerContainer {
  position: absolute;
  top: 0;
  height: 40%;
  // For Mozila
  // will-change: transform;
  // transform: translateZ(0);
}

.virtualizerOffset {
  height: 100%;
  position: absolute;
  // will-change: transform;
}

.presentationLayerWrapper {
  height: 60%;
  width: 100%;
  position: absolute;
  top: 40%;
  overflow-y: hidden; // change to auto when you want to scroll the period elements
  overflow-x: hidden;
  z-index: 2;

  /* Hide scrollbar */
  scrollbar-width: none; /* Firefox */
  -ms-overflow-style: none; /* IE and Edge */
  &::-webkit-scrollbar {
    display: none; /* Chrome, Safari, Opera */
  }
}

